variables.RunHalf.scala.error
Compilation error:
RunHalf:3: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Byte)Int
match expected type ?
while(2*biscuit = caseOrange + 1) {
       ^RunHalf:3: error: not found: value biscuit
while(2*biscuit = caseOrange + 1) {
        ^RunHalf:3: error: not found: value caseOrange
while(2*biscuit = caseOrange + 1) {
                  ^